UPDATE : Update currentParticipants after booking successful